# Data-Science-project

./: README.md  final-project.ipynb  jsonConvertor.py  main.py  matchStatsStructure.json  match_ids_stats.csv  participant_stats.csv  pyproject.toml  resources.txt  scraper.py  statsStructure.json  teamStatsStructure.json  team_stats.csv
champions/: champions.csv  champions_extended.csv  fullChampionsData.json
